# sql-agent

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
